welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:8: error: reassignment to val
			x=x+4;
                         ^Runner:11: error: reassignment to val
			x=x+2
                         ^Runner:16: error: reassignment to val
			x=x+2;
                         ^Runner:19: error: reassignment to val
			x=x+4;
                         ^