welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
var x = 0
var y= 0
 
for (y <- 1 to 7*4) { 
   	for (x <- 1 to 16) { 
   			avance(4);
			x=x+4;
			gauche();
			avance(2);
			x=x+2
			droite();
			avance(4);
			droite();
			avance(2);
			x=x+2;
			gauche();
			avance(4);
			x=x+4;
			gauche
   	}
}
